<resources>
    <string name="oppo_id" translatable="false">479816</string>
    <string name="oppo_key" translatable="false">8Tc1fS49sXCskC8SKcKSk4488</string>
    <string name="oppo_secret" translatable="false">A5987b94B5904C67f12fF16d06181783</string>
    <string name="oppo_push_secret" translatable="false">58779f634bC28088a12C3deA92B96806</string>
    <string name="huawei_id" translatable="false">10129690</string>
    <string name="huawei_key" translatable="false">d100wd76onz5kehhz6pa6r6w0gv959w1</string>
    <string name="xiaomi_id" translatable="false">2882303761517139929</string>
    <string name="xiaomi_key" translatable="false">5671713914929</string>
    <string name="xiaomi_secret" translatable="false">aBF/VynmyBH3b18VuQK3iQ==</string>
    <string name="tips_company">北京爱语吧科技有限公司，用户可通过QQ：572828703 邮箱：admin@iyuba.cn咨询</string>
    <string name="clear_user_alert">账号一旦注销，将删除该账号下存储的一切关于您个人信息及APP使用信息的记录，且不能再继续使用该账号进行登录学习，确定要注销账号吗？</string>
    <string name="clear_user_tip">请输入密码注销账号</string>
    <string name="user_cancel_fail">注销失败！请稍后再试。</string>
    <string name="user_cancel_success">注销成功！</string>
    <string name="sec_verify_demo_one_key_login">一键登录</string>
    <string name="sec_verify_demo_agreement_text_all">用户协议</string>
    <string name="sec_verify_demo_mob_service">隐私条款</string>
    <string name="sec_verify_demo_agreement_text_start">登录即表明同意</string>
    <string name="sec_verify_demo_agreement_text_end"> </string>
    <string name="sec_verify_demo_other_login">其它账号登录</string>
    <string name="user_name">当前用户名: </string>
    <string name="user_change">修改用户名</string>
    <string name="chakan_jifen">积分</string>
    <string name="user_calendar">打卡报告</string>
    <string name="pass_change">修改密码</string>
    <string name="login_da_ka">登录后才能打卡</string>
    <string name="login_find_password">忘记密码？</string>
    <string name="regist_userid_exist">账号已存在</string>
    <string name="register_check_pwd_1">密码需要6~20字符</string>
    <string name="register_check_username_1">用户名需要3~15字符之间</string>
    <string name="register_username_hint">用户名(3-15位英文、数字、中文)</string>
    <string name="register_pwd_hint">密码(6-20位英文、数字、下划线)</string>
    <string name="regist_phone_tocomplete">填入用户名和密码就可以完成注册</string>
    <string name="regist_check_username_1">3~20字符</string>
    <string name="regist_check_username_2">不允许使用手机号或邮箱地址作为用户名</string>
    <string name="regist_check_userpwd_1">6~20字符</string>
    <string name="regist_check_userpwd_2">请输入有效的密码</string>
    <string name="edit_success">修改成功</string>
    <string name="edit_failure">修改失败</string>
    <string name="file_provider_name_personal" translatable="false">com.iyuba.music</string>
    <string name="promotion">推广</string>
    <string name="submit">提交</string>
    <string name="edit">编辑</string>
    <string name="send">发送</string>
    <string name="delete">删除</string>
    <string name="complete">完成</string>
    <string name="reply">回复</string>
    <string name="video_loading_tip" translatable="false">正在下载视频{0}%</string>
    <string name="media_loading_tip" translatable="false">正在下载音频{0}%</string>
    <string name="please_check_network" translatable="false">请检查网络是否可用！</string>
    <string name="request_fail" translatable="false">请求失败~</string>
    <string name="request_no_more" translatable="false">没有更多数据了。</string>
    <string name="user_official" translatable="false">公众号列表</string>
    <string name="database_error" translatable="false">数据库错误~</string>
    <string name="dubbing_merge_failure" translatable="false">配音合成失败~</string>
    <string name="audio_convert_failure" translatable="false">音频格式转换失败~</string>
    <string name="record_time" translatable="false">{0}s</string>
    <string name="progress_xx" translatable="false">\??</string>
    <string name="released_success" translatable="false">恭喜您发布成功~</string>
    <string name="released_success2" translatable="false">恭喜您发布成功~\n积分 +5</string>
    <string name="released_failure" translatable="false">发布失败~</string>
    <string name="app_share_content" translatable="false">爱语吧的这款应用{0}真的很不错啊~推荐！</string>
    <string name="video_share_content" translatable="false">\&#064;爱语吧 {0} "{1}".{2}</string>
    <string name="thumbs_success" translatable="false">点赞成功</string>
    <string name="thumbs_failure" translatable="false">点赞失败</string>
    <string name="comment_num" translatable="false">评论({0})</string>
    <string name="play_click_word_text">点击英文单词查询释义！</string>
    <string name="play_no_word_interpretation">当前单词未找到释义！</string>
    <string name="play_please_take_the_word">请取英文单词</string>
    <string name="play_ins_new_word_success">成功加入生词本！</string>
    <string name="play_ins_new_word_fail">添加生词本失败，请重试！</string>
    <string name="cancel">取消</string>
    <string name="app_name">听歌学英语</string>
    <string name="app_corp">爱语吧</string>
    <string name="hello_world">听歌学英语</string>
    <string name="app_intro">最受欢迎的英语应用</string>
    <string name="app_know">朕已阅</string>
    <string name="app_qun">加群</string>
    <string name="app_more">更多</string>
    <string name="app_accept">确定</string>
    <string name="app_sure">允许</string>
    <string name="app_cancel">取消</string>
    <string name="app_del">删除</string>
    <string name="app_submit">提交</string>
    <string name="app_no_change">该设定无变化</string>
    <string name="select_all">全选</string>
    <string name="app_buy">购买</string>
    <string name="generic_server_down">服务器连接超时</string>
    <string name="no_internet">没有网络连接</string>
    <string name="generic_error">服务异常</string>
    <string name="data_error">数据解析异常</string>
    <string name="net_speed_slow">建议切换至更优质网络使用本功能</string>
    <string name="bug_exit">很抱歉，程序出现异常，即将退出</string>
    <string name="alert_home">再按一次返回桌面</string>
    <string name="alert_exit">再按一次退出程序</string>
    <string name="list_double">双击返回列表头部</string>
    <string name="unknown_error">未知错误</string>
    <string name="swipe_hint">请再用力拖拽</string>
    <string name="no_net_to_local">当前没有网络，是否听本地已下载音乐？</string>
    <string name="to_local_go">确定</string>
    <string name="storage_permission">权限请求</string>
    <string name="storage_permission_cancel">权限请求失败，无法使用当前功能</string>
    <string name="storage_permission_content">如您不允许本权限，则无法行使当前功能哦~</string>
    <string name="file_title">文件管理器</string>
    <string name="file_pos_title">选取扫描歌曲目录</string>
    <string name="file_paste_title">粘 贴 到</string>
    <string name="file_move_title">移 动 到</string>
    <string name="file_cannotopen">无法打开: %1$s</string>
    <string name="file_rename">重命名</string>
    <string name="file_delete">删除</string>
    <string name="file_info">详情</string>
    <string name="file_paste">粘贴</string>
    <string name="file_copy">复制</string>
    <string name="file_move">移动</string>
    <string name="file_create">新建</string>
    <string name="file_create_dialogtitle">新建文件夹</string>
    <string name="file_rename_dialogtitle">重命名文件夹</string>
    <string name="file_name_empty">文件名不能为空</string>
    <string name="file_name_same">文件名相同</string>
    <string name="file_exists">文件已存在！</string>
    <string name="file_noexists">文件不存在！</string>
    <string name="file_create_fail">创建文件失败！</string>
    <string name="file_rename_fail">重命名失败！</string>
    <string name="file_name">文件名</string>
    <string name="file_size">大小</string>
    <string name="file_contents">内容</string>
    <string name="file_lastmodified">最后修改时间</string>
    <string name="file_remove">文件迁移</string>
    <string name="file_remove_info">文件正在移动中，请稍候……</string>
    <string name="file_path_move_success">迁移成功</string>
    <string name="file_path_move_exception">迁移过程中有异常，请您重新选择文件夹或手动迁移</string>
    <string name="oper_sign_in">每日打卡任务</string>
    <string name="oper_visitor">当前是临时账户</string>
    <string name="oper_sign_in_handle">打卡</string>
    <string name="oper_visitor_handle">登录</string>
    <string name="oper_message_center">消息中心</string>
    <string name="oper_group">听歌学英语官方群</string>
    <string name="oper_video">视频</string>
    <string name="oper_course">微课</string>
    <string name="oper_send_book">点我送书</string>
    <string name="oper_vip">会员中心</string>
    <string name="oper_ground">爱语吧</string>
    <string name="oper_discover">发现</string>
    <string name="oper_small_video">小视频</string>
    <string name="oper_me">个人中心</string>
    <string name="oper_myself">我的</string>
    <string name="oper_night">夜间模式</string>
    <string name="oper_night_on">开启</string>
    <string name="oper_night_off">关闭</string>
    <string name="oper_sleep">睡眠模式</string>
    <string name="oper_wx">关注公众号</string>
    <string name="oper_setting">应用设置</string>
    <string name="update_service">更新服务</string>
    <string name="oper_about">关于我们</string>
    <string name="oper_exit">退出应用</string>
    <string name="oper_logout">退出登录</string>
    <string name="oper_follow">我关注的</string>
    <string name="oper_fan">我的粉丝</string>
    <string name="oper_friends">搜索朋友</string>
    <string name="oper_download">我的下载</string>
    <string name="oper_favor">我的收藏</string>
    <string name="oper_listen">我听过的</string>
    <string name="oper_credits">积分</string>
    <string name="oper_rank">排行</string>
    <string name="oper_bigdata">i学习</string>
    <string name="oper_activity">活动</string>
    <string name="oper_circle">朋友圈</string>
    <string name="oper_message">消息会话</string>
    <string name="oper_recommend">推荐好友</string>
    <string name="oper_local_music">本地播放器</string>
    <string name="oper_file">文件管理</string>
    <string name="oper_eggshell">彩蛋</string>
    <string name="oper_study">学一学</string>
    <string name="oper_look">看一看</string>
    <string name="oper_search">搜一搜</string>
    <string name="oper_movies">视频</string>
    <string name="oper_us">美剧</string>
    <string name="oper_gift">礼物</string>
    <string name="login_title">登  录</string>
    <string name="login_login">登录</string>
    <string name="login_oper">注册</string>
    <string name="login_on_way">登录中，请稍候</string>
    <string name="username_hint">手机号/邮箱/用户名</string>
    <string name="userpwd_hint">6~16位密码</string>
    <string name="please_login">点击登录</string>
    <string name="auto_login">自动登录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="login_success">登录成功，欢迎回来 %1$s</string>
    <string name="login_fail">登录失败，请检查用户名密码是否正确</string>
    <string name="login_error">信息获取失败，请再次登录</string>
    <string name="login_fail_name">用户名已存在，请重新输入</string>
    <string name="login_fail_pass">密码错误</string>
    <string name="login_fail_server">服务器异常，请稍后重试</string>
    <string name="personal_logout">注销</string>
    <string name="personal_protocol">隐私协议</string>
    <string name="personal_cancel_account">注销当前账号</string>
    <string name="personal_logout_textmore">退出当前账号</string>
    <string name="personal_logout_exit">退出</string>
    <string name="personal_no_login">当前未登录爱语吧账号</string>
    <string name="personal_daily_login">每日登录+5积分</string>
    <string name="personal_change_photo">你已注册完毕，选择只属于您的个性头像吧</string>
    <string name="personal_grade">等级: %1$s</string>
    <string name="personal_credits">积分: %1$s</string>
    <string name="personal_follow">关注: %1$s</string>
    <string name="personal_fan">粉丝: %1$s</string>
    <string name="personal_message">消息: %1$s</string>
    <string name="personal_nosign">这个人很懒，什么也没留下</string>
    <string name="regist_title">注  册</string>
    <string name="regist_phone_part_two">完 成 注 册</string>
    <string name="regist_oper">注册</string>
    <string name="regist_oper_sub">网页</string>
    <string name="regist_phone_hint">填写手机号</string>
    <string name="regist_phone_registed">%1$s已经被注册过</string>
    <string name="regist_code_hint">填写验证码</string>
    <string name="vip_buy_way">选择支付方式</string>
    <string name="vip_buy_default">默认在线支付方式购买</string>
    <string name="vip_month">全站会员1个月-￥30</string>
    <string name="vip_three_month">全站会员3个月-￥88</string>
    <string name="vip_half_year">全站会员6个月-￥158</string>
    <string name="vip_year">全站会员1整年-￥298</string>
    <string name="vip_app">本应用终身会员-￥199</string>
</resources>